--- a/5factor.html
+++ b/5factor.html
@@ -126,12 +126,17 @@
       display: block;
     }
 
-    /* Background image styles */
-    body {
-      background-image: url("https://media.discordapp.net/attachments/1008571150873395220/1110970990814560348/Carly_a_nature_background_calm_that_can_be_used_for_a_website_24391d83-ffcf-4502-999a-3ec8557656e0.png?width=968&height=968");
-      background-repeat: no-repeat;
-      background-size: cover;
-    }
+body {
+    background-image: url("https://media.discordapp.net/attachments/1008571150873395220/1110970990814560348/Carly_a_nature_background_calm_that_can_be_used_for_a_website_24391d83-ffcf-4502-999a-3ec8557656e0.png?width=968&height=968");
+    background-repeat: no-repeat;
+    background-size: cover; /* this will make the image cover the entire background */
+    background-position: center center; /* this will center the image in the background */
+    background-attachment: fixed; /* this ensures the image remains in place when scrolling */
+    height: 100vh; /* this makes the body cover the entire viewport */
+    margin: 0; /* removes default margins */
+    padding: 0; /* removes default padding */
+    overflow: auto; /* adds scroll functionality if needed */
+  }
 
     .button-container {
       display: flex;
